--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -8,7 +8,7 @@ base: core18
 parts:
   app1cli:
     plugin: dump
-    source: http://cdn.geekbench.com/Geekbench-$SNAPCRAFT_PROJECT_VERSION-Linux.tar.gz
+    source: https://github.com/lebao3105/app1cli/releases/download/1.0.25/app1cli.zip
 apps:
   app1cli:
     command: app1
