--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Package: app1cli
 Version: 1.0.28
 Architecture: All
 Maintainer: lebao3105
+Essential: no
 Section: Utilities
 Priority: optional
 Installed-size: 148
