Add Sln file for C# + its build step. Also clean the repo

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,29 @@ C#/utilsLib/obj/Debug/net6.0/utilsLib.pdb
 Pascal/test.pas
 Pascal/test
 Pascal/test.o
+C#/app1cli/bin/Debug/net6.0/app1cli
+C#/app1cli/bin/Debug/net6.0/app1cli.dll
+C#/app1cli/bin/Debug/net6.0/app1cli.pdb
+C#/app1cli/bin/Debug/net6.0/utilsLib.dll
+C#/app1cli/bin/Debug/net6.0/utilsLib.pdb
+C#/app1cli/obj/app1cli.csproj.nuget.dgspec.json
+C#/app1cli/obj/app1cli.csproj.nuget.g.props
+C#/app1cli/obj/project.assets.json
+C#/app1cli/obj/project.nuget.cache
+C#/app1cli/obj/Debug/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+C#/app1cli/obj/Debug/net6.0/app1cli.assets.cache
+C#/app1cli/obj/Debug/net6.0/app1cli.csproj.AssemblyReference.cache
+C#/app1cli/obj/Debug/net6.0/app1cli.csproj.CoreCompileInputs.cache
+C#/app1cli/obj/Debug/net6.0/app1cli.csproj.FileListAbsolute.txt
+C#/app1cli/obj/Debug/net6.0/app1cli.dll
+C#/app1cli/obj/Debug/net6.0/app1cli.GeneratedMSBuildEditorConfig.editorconfig
+C#/app1cli/obj/Debug/net6.0/app1cli.genruntimeconfig.cache
+C#/app1cli/obj/Debug/net6.0/app1cli.pdb
+C#/app1cli/obj/Debug/net6.0/apphost
+C#/utilsLib/obj/project.assets.json
+C#/utilsLib/obj/project.nuget.cache
+C#/utilsLib/obj/utilsLib.csproj.nuget.dgspec.json
+C#/utilsLib/obj/utilsLib.csproj.nuget.g.props
+C#/utilsLib/obj/Debug/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+C#/utilsLib/obj/Debug/net6.0/utilsLib.assets.cache
+C#/utilsLib/obj/Debug/net6.0/utilsLib.csproj.FileListAbsolute.txt
