Clean the project

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,7 @@ Pascal/*.o
 # Make Deb output
 ./app1cli*.deb
 # C# build outputs
-C#/*/bin/*/*
-C#/*/obj/*/*
+C#/app1cli/bin/
+C#/app1cli/obj/
+C#/utilsLib/bin/
+C#/utilsLib/obj/
