Change version to 1.0.29-Alpha

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Package: app1cli
-Version: 1.0.28
+Version: 1.0.29-Alpha
 Architecture: All
 Maintainer: Le Bao Nguyen <bao12345yocoo@gmail.com>
 Essential: no
