Clean the project (again)

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # Pascal build outputs
-Pascal/*.exe
-Pascal/app1
-Pascal/*.ppu
-Pascal/*.o
+/Pascal/*.exe
+/Pascal/app1
+/Pascal/*.ppu
+/Pascal/*.o
 # Make Deb output
 ./app1cli*.deb
 # C# build outputs
-C#/app1cli/bin/
-C#/app1cli/obj/
-C#/utilsLib/bin/
-C#/utilsLib/obj/
+/C#/app1cli/bin/*
+/C#/app1cli/obj/*
+/C#/utilsLib/bin/*
+/C#/utilsLib/obj/*
