--- a/.github/workflows/pascal-dev.yml
+++ b/.github/workflows/pascal-dev.yml
@@ -5,7 +5,7 @@ name: Pascal (Current Dev branch)
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
+  # Triggers the workflow on push or pull request events but only for the choosen branch
   push:
     branches: [ 1.0.29 ]
   pull_request:
@@ -16,6 +16,19 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+
+  # Install what we need first
+  setup:
+    runs-on: macos-latest
+    
+    steps:
+      # Install fpc
+      - name: Install fpc
+        run: brew install fpc
+      # And sed
+      - name: Get gnu-sed
+        run: brew install gnu-sed
+        
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
@@ -25,19 +38,13 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      # Install fpc
-      - name: Install fpc
-        run: brew install fpc
-      # And sed
-      - name: Get gnu-sed
-        run: brew install gnu-sed
       # Compile
       - name: Compile the program (with English language resources)
         run: fpc app1.pas
         working-directory: Pascal
       - name: Compile the program (with Vietnamese language resources)
         run: | 
-          sed -i 's/lang_en/lang_vi/g' *.pas
+          sed -i 's/lang_en/lang_vi/g' {app1{,_utils},maths}.pas
           fpc app1.pas
         working-directory: Pascal
       # Clean the outputs
