--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
-Pascal/app1.exe
-Pascal/app1.o
-Pascal/app1
-Pascal/app1_utils.o
-Pascal/app1_utils.ppu
-Pascal/maths.o
-Pascal/maths.ppu
-Pascal/lang_en.ppu
-Pascal/lang_vi.ppu
+Pascal/*.ppu
+Pascal/*.o
 "C#/*/bin"
 "C#/*/obj"
 ./app1cli*.deb
