--- a/.gitignore
+++ b/.gitignore
@@ -1,66 +1,9 @@
-Pascal/app1.exe
-Pascal/app1.o
-Pascal/app1
-Pascal/app1_utils.o
-Pascal/app1_utils.ppu
-Pascal/maths.o
-Pascal/maths.ppu
-Pascal/lang_en.ppu
-Pascal/lang_vi.ppu
-C#/app1cli/bin/Debug/net6.0/app1.exe
-C#/app1cli/bin/Debug/net6.0/app1.deps.json
-C#/app1cli/bin/Debug/net6.0/app1.runtimeconfig.json
-C#/app1cli/bin/Debug/net6.0/app1.dll
-C#/app1cli/bin/Debug/net6.0/ref/app1.dll
-C#/app1cli/bin/Debug/net6.0/app1.pdb
-C#/app1cli/obj/Debug/net6.0/app1.csproj.AssemblyReference.cache  
-C#/app1cli/obj/Debug/net6.0/app1.GeneratedMSBuildEditorConfig.editorconfig
-C#/app1cli/obj/Debug/net6.0/app1.AssemblyInfoInputs.cache
-C#/app1cli/obj/Debug/net6.0/app1.AssemblyInfo.cs
-C#/app1cli/obj/Debug/net6.0/app1.csproj.CoreCompileInputs.cache    
-C#/app1cli/obj/Debug/net6.0/app1.dll
-C#/app1cli/obj/Debug/net6.0/ref/app1.dll
-C#/app1cli/obj/Debug/net6.0/app1.pdb
-C#/app1cli/obj/Debug/net6.0/app1.genruntimeconfig.cache
-C#/utilsLib/bin/Debug/net6.0/utilsLib.deps.json
-C#/utilsLib/bin/Debug/net6.0/utilsLib.dll
-C#/utilsLib/bin/Debug/net6.0/ref/utilsLib.dll
-C#/utilsLib/bin/Debug/net6.0/utilsLib.pdb
-C#/utilsLib/obj/Debug/net6.0/utilsLib.csproj.AssemblyReference.cache
-C#/utilsLib/obj/Debug/net6.0/utilsLib.GeneratedMSBuildEditorConfig.editorconfig
-C#/utilsLib/obj/Debug/net6.0/utilsLib.AssemblyInfoInputs.cache  
-C#/utilsLib/obj/Debug/net6.0/utilsLib.AssemblyInfo.cs
-C#/utilsLib/obj/Debug/net6.0/utilsLib.csproj.CoreCompileInputs.cache
-C#/utilsLib/obj/Debug/net6.0/utilsLib.dll
-C#/utilsLib/obj/Debug/net6.0/ref/utilsLib.dll
-C#/utilsLib/obj/Debug/net6.0/utilsLib.pdb
+Pascal/*.ppu
+Pascal/*.o
+Pascal/*.exe
+"C#/*/bin"
+"C#/*/obj"
 ./app1cli*.deb
 Pascal/test.pas
 Pascal/test
 Pascal/test.o
-C#/app1cli/bin/Debug/net6.0/app1cli
-C#/app1cli/bin/Debug/net6.0/app1cli.dll
-C#/app1cli/bin/Debug/net6.0/app1cli.pdb
-C#/app1cli/bin/Debug/net6.0/utilsLib.dll
-C#/app1cli/bin/Debug/net6.0/utilsLib.pdb
-C#/app1cli/obj/app1cli.csproj.nuget.dgspec.json
-C#/app1cli/obj/app1cli.csproj.nuget.g.props
-C#/app1cli/obj/project.assets.json
-C#/app1cli/obj/project.nuget.cache
-C#/app1cli/obj/Debug/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
-C#/app1cli/obj/Debug/net6.0/app1cli.assets.cache
-C#/app1cli/obj/Debug/net6.0/app1cli.csproj.AssemblyReference.cache
-C#/app1cli/obj/Debug/net6.0/app1cli.csproj.CoreCompileInputs.cache
-C#/app1cli/obj/Debug/net6.0/app1cli.csproj.FileListAbsolute.txt
-C#/app1cli/obj/Debug/net6.0/app1cli.dll
-C#/app1cli/obj/Debug/net6.0/app1cli.GeneratedMSBuildEditorConfig.editorconfig
-C#/app1cli/obj/Debug/net6.0/app1cli.genruntimeconfig.cache
-C#/app1cli/obj/Debug/net6.0/app1cli.pdb
-C#/app1cli/obj/Debug/net6.0/apphost
-C#/utilsLib/obj/project.assets.json
-C#/utilsLib/obj/project.nuget.cache
-C#/utilsLib/obj/utilsLib.csproj.nuget.dgspec.json
-C#/utilsLib/obj/utilsLib.csproj.nuget.g.props
-C#/utilsLib/obj/Debug/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
-C#/utilsLib/obj/Debug/net6.0/utilsLib.assets.cache
-C#/utilsLib/obj/Debug/net6.0/utilsLib.csproj.FileListAbsolute.txt
