Update working directory

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,10 +17,10 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: C#/app1cli
+      working-directory: CSharp/app1cli
     - name: Build
       run: dotnet build --no-restore
-      working-directory: C#/app1cli
+      working-directory: CSharp/app1cli
     - name: Test
       run: dotnet test --no-build --verbosity normal
-      working-directory: C#/app1cli
+      working-directory: CSharp/app1cli
