--- a/.github/workflows/pascal.yml
+++ b/.github/workflows/pascal.yml
@@ -13,31 +13,34 @@ jobs:
 
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: macos-latest
+    # I will run this workflow on Ubuntu
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out the repository
+      - uses: actions/checkout@v3
       # Install fpc
       - name: Install fpc
-        run: brew install fpc
-      # And sed
-      - name: Get gnu-sed
-        run: |
-          brew install gnu-sed
-          echo PATH="/usr/local/opt/gnu-sed/libexec/gnubin:$PATH" >> ~/.bashrc
-          source ~/.bashrc
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+        run: sudo apt install fp-compiler-3.2.2 gettext make
+      
       # Compile
-      - name: Compile the program (with English language resources)
-        run: fpc app1.pas -Mdelphi
+      - name: Compile the program (with gettext)
+        run: make gen_mo && make build
         working-directory: Pascal
-      - name: Compile the program (with Vietnamese language resources)
+      
+      - name: Compile the program (with lang_en unit included)
         run: | 
-          sed -i'' -e 's/lang_en/lang_vi/g' {app1{,_utils},maths}.pas
-          fpc app1.pas -Mdelphi
+          sed 's/resource/lang_en/g' {app1{,_utils},maths}.pas
+          fpc app1.pas -Fulangs
         working-directory: Pascal
+
+      - name: Compile the program (with lang_vi unit included)
+        run: |
+          sed 's/lang_en/lang_vi/g' {app1{,_utils},maths}.pas
+          fpc app1.pas -Fulangs
+        working-directory: Pascal
+        
       # Clean the outputs
       - name: Clean
         run: rm -f *.o *.ppu app1
