--- a/.github/workflows/pascal.yml
+++ b/.github/workflows/pascal.yml
@@ -40,6 +40,14 @@ jobs:
           sed 's/lang_en/lang_vi/g' {app1{,_utils},maths}.pas
           fpc app1.pas -Fulangs
         working-directory: Pascal
+      
+      # Use compile_lang.sh
+      - name: Another test
+        run: |
+          ./compile_lang.sh
+          sed 's/lang_vi/resource/g' {app1{,_utils},maths}.pas
+          fpc app1.pas
+        working-directory: Pascal
         
       # Clean the outputs
       - name: Clean
