--- a/.github/workflows/pascal.yml
+++ b/.github/workflows/pascal.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v3
       # Install fpc
       - name: Install fpc
-        run: sudo apt install fp-compiler-3.2.2 gettext make
+        run: sudo apt install fpc gettext make
       
       # Compile
       - name: Compile the program (with gettext)
