--- a/.github/workflows/pascal.yml
+++ b/.github/workflows/pascal.yml
@@ -51,5 +51,5 @@ jobs:
         
       # Clean the outputs
       - name: Clean
-        run: rm -f *.o *.ppu app1 langs/{*.pas,*.rsj} *.rsj po/*/LC_MESSAGES/*.mo
+        run: rm -f *.o *.ppu app1 langs/{*.pas,*.rsj} *.rsj po/*/*.mo
         working-directory: Pascal
