--- a/Pascal/Makefile
+++ b/Pascal/Makefile
@@ -5,8 +5,9 @@ ifndef OS
 endif
 
 gen_po: resource.pas
+	@echo This script does not support Windows. *nix only.
 	@echo This only requires resource.pas - it's English language!
-	@echo To use all languages, run compile_lang.sh instead. (only for UNIX)
+	@echo To use all languages, run compile_lang.sh instead.
 	fpc resource.pas
 	xgettext -d app1cli -o po/app1cli.pot resource.rsj
 	for i in $$(ls -d po/*/); do cp po/app1cli.pot $${i%%/}/app1cli.po && msgmerge -U $${i%%/}/app1cli.po po/app1cli.pot; done
